--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 # Virtual environments
 ping_pong_env/
 ping_pong_env_system/
+pygame_env/
+game_env/
+test_env/
+test_env_new/
 venv/
 .venv/
+env/
 
-# Python cache
+# Python
 __pycache__/
 *.pyc
 *.pyo
